client/components/user/atoms/DestinationItem/DestinationItem.scss
@use "@/utils/theme.scss" as *;

.destination-item-container {
  width: fit-content;
  min-width: 0;
  box-sizing: border-box;

  background-color: $bg;
  box-shadow: 0 0 8px 2px $green;
  border-radius: 36px;
  padding: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;

  &.has-icon {
    padding: 4px 12px;
  }

  &.flag {
    padding: 4px;
    padding-right: 12px;
    box-shadow: none;
    background: $greyMiddle;
    justify-content: flex-start;
    align-items: center;
    text-align: left;
    max-width: 100%;
  }

  .flag-icon {
    border-radius: 50%;
    width: 36px;
    height: 36px;
    flex: 0 0 auto;
  }

  &.full-width {
    width: 100%;
    min-width: 0;
  }

  &.flag.full-width {
    width: 100%;
    min-width: 0;
    justify-content: flex-start;
    text-align: left;
  }

  &.sights {
    justify-content: center;
  }

  &:hover {
    background-color: $green;
    transition: 0.3s;
    color: $bg;

    p {
      color: $bg;
    }
  }

  p {
    text-transform: uppercase;
    font-weight: 700;
    font-size: 14px;
    color: $grey;
    text-decoration: none;
    min-width: 0;
    flex: 1 1 auto;
    line-height: 1.1;
    text-align: left;
  }

  &:not(.flag) p {
    white-space: nowrap;
  }

  &.flag p {
    white-space: normal;
    overflow: visible;
    text-overflow: unset;
    word-break: normal;
    overflow-wrap: anywhere;
    hyphens: none;
    text-align: left;
    max-width: 100%;
  }

  img {
    height: 32px;
  }
}

@media screen and ($tabletMedium) {
  .destination-item-container {
    padding: 16px 24px;

    &.has-icon {
      padding: 6px 20px;
    }

    &.flag {
      padding: 6px;
      padding-right: 12px;
    }

    img {
      height: 36px;
    }
  }
}

@media screen and ($desktop) {
  .destination-item-container {
    /* obični full-width itemi mogu ostati compact */
    &.full-width:not(.flag) {
      width: fit-content;
      justify-content: center;
    }

    /* ali flag itemi moraju uvijek ostati lijevo */
    &.flag.full-width {
      width: 100%;
      min-width: 0;
      justify-content: flex-start;
      text-align: left;
    }
  }
}

